// Copyright 2024 CardinalHQ, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
import "attribute.proto";

package chqpb;


option go_package = ".;chqpb";

message LogStatsReport {
	int64 submittedAt = 1;
	repeated LogStats stats = 2;
}

message LogStats {
	string serviceName = 1;
	int64 fingerprint = 2;
	Phase phase = 3;
	int64 count = 4;
	int64 logSize = 5;
	bytes exemplar = 6;
	string processorId = 7;
	repeated Attribute attributes = 8;
}

message SpanStatsReport {
	int64 submittedAt = 1;
	repeated SpanStats stats = 2;
}


message SpanStats {
	string serviceName = 1;
	int64 fingerprint = 2;
	Phase phase = 3;
	int64 count = 4;
	int64 spanSize = 5;
	bytes exemplar = 6;
	string processorId = 7;
	repeated Attribute attributes = 8;
}

message MetricExemplar {
	string metricName = 1;
	string serviceName = 2;
	string metricType = 3;
	bytes exemplar = 4;
}

message MetricStatsReport {
	int64 submittedAt = 1;
	repeated MetricStats stats = 2;
	repeated MetricExemplar exemplars = 3;
}

message MetricStats {
	string metricName = 1;
	string serviceName = 2;
	string tagName = 3;
	Phase phase = 4;
	double cardinalityEstimate = 5;
	bytes hll = 6;
	int64 count = 7;
	string processorId = 8;
	repeated Attribute attributes = 9;
	string tagScope = 10;
	string metricType = 11;
}

enum Phase {
	PASSTHROUGH = 0;
	AGGREGATED = 1;
	AGGREGATION_OUTPUT = 2;
	FILTERED = 3;
	DRY_RUN_FILTERED = 4;
	PRE = 5;
	POST = 6;
}